test/files/neg/t3614.scala
object t3614 {
  def v = new ({ def a=0 })
}