test/files/neg/t3614.check
t3614.scala:2: error: class type required but AnyRef{def a: Int} found
  def v = new ({ def a=0 })
               ^
one error found
